--- a/test.ipynb
+++ b/test.ipynb
@@ -20,11 +20,174 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "45d1cca2",
    "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from dotenv import load_dotenv\n",
+    "import os\n",
+    "load_dotenv()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "8ddd8a80",
+   "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "OPENAI_API_KEY = os.getenv(\"OPENAI_API_KEY\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "84c8f30b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "if not OPENAI_API_KEY:\n",
+    "    raise ValueError(\"OPENAI_API_KEY is missing in your .env\")\n",
+    "os.environ[\"OPENAI_API_KEY\"] = OPENAI_API_KEY"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a94c321b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from langchain_openai import ChatOpenAI"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "dc5d1ec5",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "chat_llm = ChatOpenAI(model=\"gpt-4o-mini\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "e54b549c",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "\"Hello! I'm just a computer program, so I don't have feelings, but I'm here and ready to help you. How can I assist you today?\""
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "chat_llm.invoke(\"Hello, how are you?\").content\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "59bc9d91",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from typing_extensions import TypedDict, Annotated\n",
+    "import operator"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "31678f49",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from langchain_core.messages import AnyMessage, HumanMessage, AIMessage"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "d784b5bd",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class GraphState(TypedDict):\n",
+    "    messages: Annotated[list[AnyMessage], operator.add]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "edd84742",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "[\"hi\"]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ec54a6cc",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "[\"hi\",\"how are you?\"]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f7921966",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def llm_call(state: GraphState) -> dict:\n",
+    "    \"\"\"Call the LLM using conversation messages and append AI response.\"\"\"\n",
+    "    response = chat_llm.invoke(state[\"messages\"])  # AIMessage\n",
+    "    return {\n",
+    "        \"messages\": [response]\n",
+    "    }\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5dc6d044",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def token_counter(state: GraphState) -> dict:\n",
+    "    \"\"\"Count tokens (simple word count) in the last AI message.\"\"\"\n",
+    "    last_msg = state[\"messages\"][-1]\n",
+    "    text = last_msg.content\n",
+    "    token_number = len(text.split())\n",
+    "    summary = f\"Total token number in the generated answer (word count) is {token_number}\"\n",
+    "    return {\n",
+    "        \"messages\": [AIMessage(content=summary)]\n",
+    "    }\n"
+   ]
   }
  ],
  "metadata": {
