--- a/notebook/test copy.ipynb
+++ b/notebook/test copy.ipynb
@@ -699,7 +699,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": null,
    "id": "0c046101",
    "metadata": {},
    "outputs": [],
@@ -723,8 +723,10 @@
     "        currency = stock.info.get(\"currency\", \"\")\n",
     "        symbol_map = {\n",
     "\t\t\t\"USD\": \"$\",\n",
-    "\t\t\t\"EUR\": \"&\"\n",
+    "\t\t\t\"EUR\": \"€\",\n",
+    "            \"GBR\": \"£\"\n",
     "\t\t}\n",
+    "        \n",
     "        symbol = symbol_map.get(currency, \"\")\n",
     "        currency_text = currency if currency else \"\"\n",
     "\n",
@@ -796,7 +798,48 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 62,
+   "id": "406ff8f5",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "ChatOpenAI(profile={'max_input_tokens': 128000, 'max_output_tokens': 16384, 'text_inputs': True, 'image_inputs': True, 'audio_inputs': False, 'video_inputs': False, 'text_outputs': True, 'image_outputs': False, 'audio_outputs': False, 'video_outputs': False, 'reasoning_output': False, 'tool_calling': True, 'structured_output': True, 'image_url_inputs': True, 'pdf_inputs': True, 'pdf_tool_message': True, 'image_tool_message': True, 'tool_choice': True}, client=<openai.resources.chat.completions.completions.Completions object at 0x000001C3DE5B7380>, async_client=<openai.resources.chat.completions.completions.AsyncCompletions object at 0x000001C3DE5B7E00>, root_client=<openai.OpenAI object at 0x000001C3DE5B4AD0>, root_async_client=<openai.AsyncOpenAI object at 0x000001C3DE5B7B60>, model_name='gpt-4o-mini', model_kwargs={}, openai_api_key=SecretStr('**********'), stream_usage=True)"
+      ]
+     },
+     "execution_count": 62,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "chat_llm"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 74,
+   "id": "9f54cb20",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "llm_with_tools=chat_llm.bind_tools(tools)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "af40efb5",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "result = llm_with_tools.invoke(\"What is stock price\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 75,
    "id": "24d68b65",
    "metadata": {},
    "outputs": [],
@@ -809,18 +852,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": null,
+   "id": "46151998",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "SYSTEM_PROMPT = SystemMessage(content=\"You are a helpful assistant that can use tools to answer question\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "75108674",
    "metadata": {},
    "outputs": [],
    "source": [
     "def function_1(state: MessagesState):\n",
-    "    pass"
+    "    user_question=state[\"messages\"]\n",
+    "    input_question = [SYSTEM_PROMPT] + user_question\n",
+    "    response = llm_with_tools.invoke(input_question)\n",
+    "\n",
+    "    return{\n",
+    "        \"messages\": [response]\n",
+    "    }"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 77,
    "id": "98ab0dcf",
    "metadata": {},
    "outputs": [],
@@ -831,7 +890,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 78,
    "id": "d0476262",
    "metadata": {},
    "outputs": [],
@@ -841,17 +900,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 79,
    "id": "e92742b3",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<langgraph.graph.state.StateGraph at 0x1c3f02382d0>"
+       "<langgraph.graph.state.StateGraph at 0x1c3f00c9e00>"
       ]
      },
-     "execution_count": 55,
+     "execution_count": 79,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -862,17 +921,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 80,
    "id": "c752d8d0",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<langgraph.graph.state.StateGraph at 0x1c3f02382d0>"
+       "<langgraph.graph.state.StateGraph at 0x1c3f00c9e00>"
       ]
      },
-     "execution_count": 56,
+     "execution_count": 80,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -883,17 +942,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 81,
    "id": "c9c39a48",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<langgraph.graph.state.StateGraph at 0x1c3f02382d0>"
+       "<langgraph.graph.state.StateGraph at 0x1c3f00c9e00>"
       ]
      },
-     "execution_count": 57,
+     "execution_count": 81,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -904,17 +963,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 82,
    "id": "b72a5d84",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<langgraph.graph.state.StateGraph at 0x1c3f02382d0>"
+       "<langgraph.graph.state.StateGraph at 0x1c3f00c9e00>"
       ]
      },
-     "execution_count": 58,
+     "execution_count": 82,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -928,17 +987,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 83,
    "id": "fb170020",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<langgraph.graph.state.StateGraph at 0x1c3f02382d0>"
+       "<langgraph.graph.state.StateGraph at 0x1c3f00c9e00>"
       ]
      },
-     "execution_count": 59,
+     "execution_count": 83,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -949,7 +1008,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 84,
    "id": "193e0d46",
    "metadata": {},
    "outputs": [],
@@ -959,7 +1018,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 85,
    "id": "8b52f3ce",
    "metadata": {},
    "outputs": [
@@ -977,6 +1036,171 @@
    "source": [
     "from IPython.display import Image, display\n",
     "display(Image(app.get_graph(xray=True).draw_mermaid_png()))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 86,
+   "id": "388edfbe",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "NVDA: Period 'id' is invalid, must be one of: 1d, 5d, 1mo, 3mo, 6mo, 1y, 2y, 5y, 10y, ytd, max\n",
+      "HTTP Error 404: {\"quoteSummary\":{\"result\":null,\"error\":{\"code\":\"Not Found\",\"description\":\"Quote not found for symbol: NVIDIA\"}}}\n",
+      "$NVIDIA: possibly delisted; no price data found  (period=id) (Yahoo error = \"No data found, symbol may be delisted\")\n"
+     ]
+    }
+   ],
+   "source": [
+    "result = app.invoke({\n",
+    "\t\"messages\": [HumanMessage(content=\"what is the stock for Nvidia?\")]\n",
+    "})"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 87,
+   "id": "652aa691",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "================================\u001b[1m Human Message \u001b[0m=================================\n",
+      "\n",
+      "what is the stock for Nvidia?\n",
+      "==================================\u001b[1m Ai Message \u001b[0m==================================\n",
+      "Tool Calls:\n",
+      "  get_stock_price (call_gBTAwlRI6MiQcMP3cs4eduQu)\n",
+      " Call ID: call_gBTAwlRI6MiQcMP3cs4eduQu\n",
+      "  Args:\n",
+      "    ticker: NVDA\n",
+      "=================================\u001b[1m Tool Message \u001b[0m=================================\n",
+      "Name: get_stock_price\n",
+      "\n",
+      "No data found for ticker ticker. Please check the symbol.\n",
+      "==================================\u001b[1m Ai Message \u001b[0m==================================\n",
+      "Tool Calls:\n",
+      "  get_stock_price (call_ZLHGN4m9cIUSayrBFCbHLXw0)\n",
+      " Call ID: call_ZLHGN4m9cIUSayrBFCbHLXw0\n",
+      "  Args:\n",
+      "    ticker: NVIDIA\n",
+      "=================================\u001b[1m Tool Message \u001b[0m=================================\n",
+      "Name: get_stock_price\n",
+      "\n",
+      "No data found for ticker ticker. Please check the symbol.\n",
+      "==================================\u001b[1m Ai Message \u001b[0m==================================\n",
+      "\n",
+      "It appears there was an issue retrieving the stock price for Nvidia. The correct ticker symbol for Nvidia is \"NVDA.\" Unfortunately, I wasn't able to fetch the current stock price at this moment. You might want to check a financial news site or stock trading platform for the latest information.\n"
+     ]
+    }
+   ],
+   "source": [
+    "for m in result['messages']:\n",
+    "    m.pretty_print()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 88,
+   "id": "54a2b604",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "result = app.invoke({\n",
+    "\t\"messages\": [HumanMessage(content=\"what is final budget of Tesla for 2025?\")]\n",
+    "})"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 89,
+   "id": "c393d9a0",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "================================\u001b[1m Human Message \u001b[0m=================================\n",
+      "\n",
+      "what is final budget of Tesla for 2025?\n",
+      "==================================\u001b[1m Ai Message \u001b[0m==================================\n",
+      "Tool Calls:\n",
+      "  wikipedia (call_U7gTvs8C1vf73HAapD5IqoU5)\n",
+      " Call ID: call_U7gTvs8C1vf73HAapD5IqoU5\n",
+      "  Args:\n",
+      "    query: Tesla budget 2025\n",
+      "=================================\u001b[1m Tool Message \u001b[0m=================================\n",
+      "Name: wikipedia\n",
+      "\n",
+      "Page: Tesla Model Y\n",
+      "Summary: The Tesla Model Y is a battery electric compact crossover SUV produced by Tesla, Inc. since 2020. Presented in March 2019 as the company's fifth production model, the Model Y is the best-selling electric vehicle of all time, having sold more than 2.16 million units worldwide.\n",
+      "After its 2019 introduction, the Model Y started production at the Tesla Fremont Factory in California, US in January 2020. Production at Giga Shanghai, China was added in December 2020, and at Gigafactory Texas, US since late 2021. Deliveries from Gigafactory Berlin-Brandenburg, Germany started in March 2022. The Model Y is based on the Model 3 sedan and serves as a larger variant, with around 76 percent of parts being shared between the two and identical exterior and interior styling. While most Model Y are configured with two-row seating, in the US the Model Y offered optional third-row seats for a seven-passenger seating capacity until the 2025 refresh.\n",
+      "In 2023, Tesla delivered 1.2\n",
+      "==================================\u001b[1m Ai Message \u001b[0m==================================\n",
+      "\n",
+      "I couldn't find specific information on Tesla's final budget for 2025. Tesla's financial details, including budget forecasts, are generally provided in quarterly earnings reports or press releases. For the most accurate and current information, I recommend checking Tesla's official financial statements or reliable financial news sources.\n"
+     ]
+    }
+   ],
+   "source": [
+    "for m in result['messages']:\n",
+    "    m.pretty_print()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 90,
+   "id": "6c0e4d41",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "================================\u001b[1m Human Message \u001b[0m=================================\n",
+      "\n",
+      "what is latest AI News?\n",
+      "==================================\u001b[1m Ai Message \u001b[0m==================================\n",
+      "Tool Calls:\n",
+      "  wikipedia (call_VBxBqtdBAeLfkn9GFgIsWqQr)\n",
+      " Call ID: call_VBxBqtdBAeLfkn9GFgIsWqQr\n",
+      "  Args:\n",
+      "    query: Latest AI news\n",
+      "=================================\u001b[1m Tool Message \u001b[0m=================================\n",
+      "Name: wikipedia\n",
+      "\n",
+      "Page: Mistral AI\n",
+      "Summary: Mistral AI SAS (French: [mistʁal]) is a French artificial intelligence (AI) company, headquartered in Paris. Founded in 2023, it has open-weight large language models (LLMs), with both open-source and proprietary AI models. As of 2025 the company has a valuation of more than US$14 billion.\n",
+      "\n",
+      "\n",
+      "\n",
+      "Page: AI slop\n",
+      "Summary: AI slop (known simply as slop) is digital content made with generative artificial intelligence that is lacking in effort, quality, or meaning, and produced in high volume as clickbait to gain advantage in the attention economy, or earn money. It is a form of synthetic media usually linked to the monetization in the creator economy of social media and online advertising. Coined in the 2020s, the term has a pejorative connotation similar to spam. \"Slop\" was selected as the 2025 Word of the Year by both Merriam-Webster and the American Dialect Society.\n",
+      "AI slop has been variously defined as \"digital clutter\", \"filler content prioritizing speed and quant\n",
+      "==================================\u001b[1m Ai Message \u001b[0m==================================\n",
+      "\n",
+      "Here are some highlights from the latest AI news:\n",
+      "\n",
+      "1. **Mistral AI**: Founded in 2023, Mistral AI is a French company specializing in artificial intelligence, particularly in open-weight large language models. As of 2025, the company's valuation has soared to over $14 billion.\n",
+      "\n",
+      "2. **AI Slop**: The term \"AI slop\" refers to digital content generated by artificial intelligence that is of low quality or effort, and produced in high volumes to gain attention or monetize online. Coined in the 2020s, it has a negative connotation similar to that of spam. \"Slop\" was named the 2025 Word of the Year by both Merriam-Webster and the American Dialect Society.\n",
+      "\n",
+      "These summaries reflect current trends and developments in the field of artificial intelligence.\n"
+     ]
+    }
+   ],
+   "source": [
+    "result = app.invoke({\n",
+    "\t\"messages\": [HumanMessage(content=\"what is latest AI News?\")]\n",
+    "})\n",
+    "for m in result['messages']:\n",
+    "    m.pretty_print()"
    ]
   }
  ],
